# osp.tools.visualculture

./: .gitignore  .gitmodules  Gemfile  README-OSP.md  README-OSP.txt  README.txt  REEDME-OSP.txt  Rakefile  app.rb  config.ru  gevent_server.py  settings.json  settings.json.example  visualculture-0.1.0.gem  visualculture.gemspec
bobo/: rce_wsgi.py  test.py
bobo/disputio/: routes.py
bobo/media/: styles-start.less  visualculture.less
bobo/visualculture/: routes.py  transducer.py
lib/: vc-cache.rb  vc-grit.rb  vc-repo.rb  vc-server.rb  vc-transduction.rb  visualculture.rb
lib/transducers/: base.rb  gif.rb  jpg.rb  otf.rb  pdf.rb  png.rb  svg.rb  ttf.rb
lib/views/: blob.erb  dir.erb  index.erb  layout.erb  repos.erb
patches/: mimes.yml  pythonexec.rb  test_mime.rb
public/: .gitignore  Makefile  README.md  visualculture.less
public/atfont-face/: cimatics-dust-webfont.eot  crickxrush_crickxrush-webfont.eot  diluvienne-webfont.eot  lmroman5-regular-webfont.eot  polsku-webfont.eot  universelse-bold-webfont.eot
public/css/: visualculture.css
public/js/: bootstrap-modal.js
tests/: blobs_test.rb  settings_test.rb  test_blobs.rb
vc_django/: README.txt  errors.py  http_errors.py  middleware.py  settings_example.py  urls.py
vc_django_templates/: test_browser.html
vc_pypoppler/: CMakeLists.txt  README.txt  vc_pypoppler.cpp
vc_pypoppler/cmake/modules/: FindPoppler.cmake
views/: blob.erb  category.erb  dir.erb  home.erb  index.erb  layout.erb  repos.erb
visual/: README.txt
visualculture/: dev.data-journal  settings.py.example  urls.py
(+141 files in other folders)
